--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.29.0",
+        "@types/jquery": "^3.3.38",
         "core-js": "^3.0.0",
         "css-loader": "^3.5.3",
         "node-sass": "^4.14.0",
