--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jquery": "^3.4.1",
         "popper.js": "^1.16.1",
         "vue": "^2.6.11",
+        "vue-mq": "^1.0.1",
         "vue-router": "^3.2.0",
         "vuex": "^3.3.0"
     }
