--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "type": "project",
-    "license": "MPL",
+    "license": "MIT",
     "require": {
         "php": "^7.4",
         "ext-ctype": "*",
