--- a/realtime-socket/Cargo.toml
+++ b/realtime-socket/Cargo.toml
@@ -13,3 +13,4 @@ tokio-tungstenite = "^0.11"
 tokio = { version = "^0.2.22", features = ["full"] }
 futures = "^0.3"
 tokio-amqp = "^0.1.3"
+redis = { version = "^0.17", features = ["tokio-rt-core"]}
